--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "string": "node --watch ./js/kintamieji/string.js",
     "number": "node --watch ./js/kintamieji/number.js",
-    "dev": "node ./index.js",
+    "dev": "node --watch ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
