--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "boolean": "node --watch ./js/kintamieji/boolean.js",
     "string": "node --watch ./js/kintamieji/string.js",
     "number": "node --watch ./js/kintamieji/number.js",
     "dev": "node --watch ./index.js",
