--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "object": "node --watch ./js/kintamieji/object.js",
+    "array": "node --watch ./js/kintamieji/array.js",
     "boolean": "node --watch ./js/kintamieji/boolean.js",
     "string": "node --watch ./js/kintamieji/string.js",
     "number": "node --watch ./js/kintamieji/number.js",
