--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "type":"module",  
   "main": "index.js",
   "scripts": {
+    "typeof": "node --watch ./js/kintamieji/if/typeof.js",
+    "nd2": "node --watch ./js/kintamieji/nd2.js",
     "import": "node --watch ./js/kintamieji/lib/import.js",
     "for": "node --watch ./js/kintamieji/for.js",
     "function": "node --watch ./js/kintamieji/function.js",
