--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "type":"module",  
   "main": "index.js",
   "scripts": {
-    "typeof": "node --watch ./js/kintamieji/if/typeof.js",
-    "nd2": "node --watch ./js/kintamieji/nd2.js",
-    "import": "node --watch ./js/kintamieji/lib/import.js",
-    "for": "node --watch ./js/kintamieji/for.js",
-    "function": "node --watch ./js/kintamieji/function.js",
-    "ternary": "node --watch ./js/kintamieji/ternary.js",
-    "nd1": "node --watch ./js/kintamieji/nd1.js",
-    "if": "node --watch ./js/kintamieji/if.js",
+    "stringreverse": "node --watch ./js/uzd/stringreverse.js",
+    "typeof": "node --watch ./js/if/typeof.js",
+    "nd2": "node --watch ./js/uzd/nd2.js",
+    "import": "node --watch ./js/lib/import.js",
+    "for": "node --watch ./js/ciklas(loops)/for.js",
+    "function": "node --watch ./js/function/function.js",
+    "ternary": "node --watch ./js/if/ternary.js",
+    "nd1": "node --watch ./js/uzd/nd1.js",
+    "if": "node --watch ./js/if/if.js",
     "null": "node --watch ./js/kintamieji/null.js",
     "object": "node --watch ./js/kintamieji/object.js",
     "array": "node --watch ./js/kintamieji/array.js",
