--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type":"module",  
   "main": "index.js",
   "scripts": {
+    "nd3": "node --watch ./js/uzd/nd3.js",
     "stringreverse": "node --watch ./js/uzd/stringreverse.js",
     "typeof": "node --watch ./js/if/typeof.js",
     "nd2": "node --watch ./js/uzd/nd2.js",
