--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "typeof": "node --watch ./js/if/typeof.js",
     "nd2": "node --watch ./js/uzd/nd2.js",
     "import": "node --watch ./js/lib/import.js",
+    "while": "node --watch ./js/ciklas(loops)/while.js",
+    "for-in": "node --watch ./js/ciklas(loops)/for-in.js",
+    "for-of": "node --watch ./js/ciklas(loops)/for-of.js",
     "for": "node --watch ./js/ciklas(loops)/for.js",
     "function": "node --watch ./js/function/function.js",
     "ternary": "node --watch ./js/if/ternary.js",
