--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type":"module",  
   "main": "index.js",
   "scripts": {
+    "string-method": "node --watch ./js/method/string.js",
     "number-method": "node --watch ./js/method/number.js",
     "nd3": "node --watch ./js/uzd/nd3.js",
     "stringreverse": "node --watch ./js/uzd/stringreverse.js",
