switch, math methods

--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "type":"module",  
   "main": "index.js",
   "scripts": {
+    "switchcase": "node --watch ./js/function/switch.js",
+    "math-random": "node --watch ./js/method/math-random.js",
+    "methodmath": "node --watch ./js/method/math.js",
+    "methodreduce": "node --watch ./js/method/array-reduce.js",
+    "methodspread": "node --watch ./js/method/spread.js",
     "arraymethodsort": "node --watch ./js/method/array-sort.js",
     "arraymethodforeach": "node --watch ./js/method/array-foreach.js",
     "arraymethodevery": "node --watch ./js/method/array-every.js",
@@ -14,6 +19,7 @@
     "string-method": "node --watch ./js/method/string.js",
     "number-method": "node --watch ./js/method/number.js",
     "nd3": "node --watch ./js/uzd/nd3.js",
+    "students": "node --watch ./js/uzd/students-average.js",
     "stringreverse": "node --watch ./js/uzd/stringreverse.js",
     "typeof": "node --watch ./js/if/typeof.js",
     "nd2": "node --watch ./js/uzd/nd2.js",
